force-app/main/default/objects/Event1__c/Event1__c.object-meta.xml
<CustomObject>
    <label>Event1</label>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>