force-app/main/default/objects/Event1__c/fields/Days_to_COD__c.field-meta.xml
<CustomField>
    <fullName>Days_to_COD__c</fullName>
    <formula>COD__c - TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to COD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>