force-app/main/default/objects/Event1__c/fields/Days_to_TR25__c.field-meta.xml
<CustomField>
    <fullName>Days_to_TR25__c</fullName>
    <formula>TR25__c -  TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to TR25</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>