force-app/main/default/objects/Event1__c/fields/Remind_in_advance__c.field-meta.xml
<CustomField>
    <fullName>Remind_in_advance__c</fullName>
    <label>Remind in advance</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>