force-app/main/default/objects/Event1__c/fields/TR25__c.field-meta.xml
<CustomField>
    <fullName>TR25__c</fullName>
    <label>TR25</label>
    <type>Date</type>
</CustomField>