force-app/main/default/objects/Event1__c/recordTypes/COD_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>COD_Record_Type</fullName>
    <active>true</active>
    <label>COD Record Type</label>
</RecordType>