force-app/main/default/objects/Event1__c/recordTypes/TR25_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>TR25_Record_Type</fullName>
    <active>true</active>
    <label>TR25 Record Type</label>
</RecordType>